--- a/public/index.html
+++ b/public/index.html
@@ -409,6 +409,7 @@
         </div>
     </div>
 
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"></script>
     <script src="reader.js"></script>
 </body>
 
