fix: clickable refs, math rendering, chrome-style drag tabs
- postProcessSplitContent: render math-raw spans via katex.renderToString;
  walk text nodes converting [key]/[N] citations to ref-badge spans using
  bibliography li#ref-N entries; wire clicks to showRefDetail + state.references
- tex2html.js: extend convertMath to cover eqnarray*, gather, multline;
  fix extractBibliography + ref numbering to emit data-title on badges
- Chrome-style drag: ghost image of header bar, smooth dashed placeholder
  tracks cursor position between panels, drop snaps into place
- Add grab/grabbing cursor + hover accent underline to split headers

--- a/public/index.html
+++ b/public/index.html
@@ -409,6 +409,7 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"></script>
     <script src="reader.js"></script>
 </body>
